Fix the problem with the TryChromeAgain toast appearing in the wrong place on scale factors other than 1

Reason being we were converting a rectangle which was already in DIPS to DIPs. Fix is to
return a smaller rectangle with the correct origin. Additionally the
size passed to set the toast region has to be in pixels.

BUG=731026

Reset to tip

Review-Url: https://codereview.chromium.org/2992493002
Cr-Commit-Position: refs/heads/master@{#489707}

Former-commit-id: 655c7008fb0dc647d743c706797d55e5cccd9f65